# scrapy-test

./: CHANGELOG  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readme.md  setup.py
example/: readme.md  scrapy.cfg
example/example/: settings.py  test.py
example/example/spiders/: __init__.py  hackernews.py
example/tests/: items.py  scrapytest.py  spiders.py  stats.py
example_project/: readme.md  scrapy.cfg  setup.py
example_project/example/: items.py
example_project/example/spiders/: hackernews.py
example_project/tests/: README.md  items.py  scrapytests.py  spiders.py  stats.py
illustrations/: architecture.xml
scrapytest/: __init__.py  cli.py  default_settings.py  notifiers.py  runner.py  spec.py  tests.py  utils.py  validate.py
tests/: test_spec.py  test_tests.py  test_utils.py  test_validate.py
