[tool.poetry]
name = "scrapy-test"
version = "0.6.3"
description = "scrapy output testing framework"
authors = ["granitosaurus <tinarg@protonmail.com>"]
license = "GPL-3.0+"
packages = [{ include = "scrapytest" }]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
scrapy = "^1.8.0"
typeguard = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"

[tool.poetry.scripts]
scrapy-test = "scrapytest.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
